@@ -216,9 +216,9 @@ class SagePayTest < Test::Unit::TestCase
 
   def test_description_is_truncated
     stub_comms(@gateway, :ssl_request) do
-      purchase_with_options(description: "SagePay transactions fail if the description is more than 100 characters. Therefore, we truncate it to 100 characters.")
+      purchase_with_options(description: "SagePay transactions fail if the déscription is more than 100 characters. Therefore, we truncate it to 100 characters.")
     end.check_request do |method, endpoint, data, headers|
-      assert_match(/&Description=SagePay\+transactions\+fail\+if\+the\+description\+is\+more\+than\+100\+characters.\+Therefore%2C\+we\+truncate\+it\+&/, data)
+      assert_match(/&Description=SagePay\+transactions\+fail\+if\+the\+d%C3%A9scription\+is\+more\+than\+100\+characters.\+Therefore%2C\+we\+trunc&/, data)
     end.respond_with(successful_purchase_response)
   end
 
@@ -276,6 +276,12 @@ class SagePayTest < Test::Unit::TestCase
 
   def test_transcript_scrubbing
     assert_equal scrubbed_transcript, @gateway.scrub(transcript)
+  end
+
+  def test_truncate_accounts_for_url_encoding
+    assert_nil @gateway.send(:truncate, nil, 3)
+    assert_equal "Wow", @gateway.send(:truncate, "WowAmaze", 3)
+    assert_equal "Joikam Lomström", @gateway.send(:truncate, "Joikam Lomström Rate", 20)
   end
 
   private
